# routers/api/listing.go
@@ -6,22 +6,31 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/mikezzb/steam-trading-server/app"
 	"github.com/mikezzb/steam-trading-server/e"
+	"github.com/mikezzb/steam-trading-server/pkg/setting"
 	"github.com/mikezzb/steam-trading-server/services"
 	"github.com/mikezzb/steam-trading-server/util"
 )
 
-// @Summary Get listings, with JWT bearer token auth
+// @Summary Get listings
+// @Security Bearer
 // @Produce json
 // @Param page query int false "Page"
+// @Param name query string true "Item Name"
+// @Param page query int true "Page"
+// @Param rarity query string false "Item Rarity"
+// @Param paintSeed query string false "Item Paint Seed"
 // @Router /listings [get]
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
 func GetListings(c *gin.Context) {
 	appG := app.Gin{C: c}
 
-	listingService := services.Listing{
-		Page: util.GetPage(c),
-	}
+	listingService := services.Listing{}
 
-	listings, err := listingService.GetListings()
+	itemFilters := util.NewItemFilters(c.Request.URL.Query())
+	page := util.GetPage(c)
+
+	listings, err := listingService.GetListingsByPage(page, itemFilters)
 
 	if err != nil {
 		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, err)
@@ -29,16 +38,15 @@ func GetListings(c *gin.Context) {
 	}
 
 	// add total count
-	total, err := listingService.Count()
+	total, err := listingService.Count(itemFilters)
 
 	if err != nil {
 		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, err)
 		return
 	}
 
-	data := make(map[string]interface{})
+	data := util.MakePagingData(page, setting.App.ListingPageSize, total)
 	data["listings"] = listings
-	data["total"] = total
 
 	appG.Response(http.StatusOK, e.SUCCESS, data)
 }
